AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__PartyObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__PartyObject__c</fullName>
    <label>Party Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Party Object</masterLabel>
        <refAttrDeveloperName>PartyObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>