AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__PartyWebAddressId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PartyWebAddressId__c</fullName>
    <label>Party Web Address</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Party Web Address</masterLabel>
        <refAttrDeveloperName>PartyWebAddressId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>