AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__PaymentTerm__c.field-meta.xml
<CustomField>
    <fullName>ssot__PaymentTerm__c</fullName>
    <label>Payment Term</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Payment Term</masterLabel>
        <refAttrDeveloperName>PaymentTerm</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>