AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__PrimaryIndustry__c.field-meta.xml
<CustomField>
    <fullName>ssot__PrimaryIndustry__c</fullName>
    <label>Primary Industry</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Primary Industry</masterLabel>
        <refAttrDeveloperName>PrimaryIndustry</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>