AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__PrimarySalesRepId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PrimarySalesRepId__c</fullName>
    <label>Primary Sales Rep</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Primary Sales Rep</masterLabel>
        <refAttrDeveloperName>PrimarySalesRepId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>