AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__ProfileImageUrl__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProfileImageUrl__c</fullName>
    <label>Profile Image URL</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Profile Image URL</masterLabel>
        <refAttrDeveloperName>ProfileImageUrl</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>