AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__RateBasedFundingOverdrawPercent__c.field-meta.xml
<CustomField>
    <fullName>ssot__RateBasedFundingOverdrawPercent__c</fullName>
    <label>Rate Based Funding Overdraw Percentage</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Rate Based Funding Overdraw Percentage</masterLabel>
        <refAttrDeveloperName>RateBasedFundingOverdrawPercent</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>