AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__SalesPhoneId__c.field-meta.xml
<CustomField>
    <fullName>ssot__SalesPhoneId__c</fullName>
    <label>Sales Phone</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Sales Phone</masterLabel>
        <refAttrDeveloperName>SalesPhoneId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>