AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__ShippingAddressId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ShippingAddressId__c</fullName>
    <label>Shipping Address</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Shipping Address</masterLabel>
        <refAttrDeveloperName>ShippingAddressId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>