AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__ShippingEmailId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ShippingEmailId__c</fullName>
    <label>Shipping Email</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Shipping Email</masterLabel>
        <refAttrDeveloperName>ShippingEmailId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>