AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__ShippingPhoneid__c.field-meta.xml
<CustomField>
    <fullName>ssot__ShippingPhoneid__c</fullName>
    <label>Shipping Phone</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Shipping Phone</masterLabel>
        <refAttrDeveloperName>ShippingPhoneid</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>