AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__SourceSystemModifiedDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__SourceSystemModifiedDateTime__c</fullName>
    <label>Source System Modified Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Source System Modified Date</masterLabel>
        <refAttrDeveloperName>SourceSystemModifiedDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>