AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__TaxPaymentJurisdictionCode__c.field-meta.xml
<CustomField>
    <fullName>ssot__TaxPaymentJurisdictionCode__c</fullName>
    <label>Tax Payment Jurisdiction Code</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Tax Payment Jurisdiction Code</masterLabel>
        <refAttrDeveloperName>TaxPaymentJurisdictionCode</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>