AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__ThirtyDayBalanceAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__ThirtyDayBalanceAmount__c</fullName>
    <label>Thirty Day Balance Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Thirty Day Balance Amount</masterLabel>
        <refAttrDeveloperName>ThirtyDayBalanceAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>