AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__TradeClassificationType__c.field-meta.xml
<CustomField>
    <fullName>ssot__TradeClassificationType__c</fullName>
    <label>Trade Classification Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Trade Classification Type</masterLabel>
        <refAttrDeveloperName>TradeClassificationType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>