AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__UseAsSalesAccount__c.field-meta.xml
<CustomField>
    <fullName>ssot__UseAsSalesAccount__c</fullName>
    <label>Use As Sales Account</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Use As Sales Account</masterLabel>
        <refAttrDeveloperName>UseAsSalesAccount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>