AmpShare SF Codebase/force-app/main/default/objects/ssot__Account__dlm/fields/ssot__WebsiteAddr__c.field-meta.xml
<CustomField>
    <fullName>ssot__WebsiteAddr__c</fullName>
    <label>Website</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Website</masterLabel>
        <refAttrDeveloperName>WebsiteAddr</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>